src/objects/ADvendio__ProgrammaticData__c.object
<CustomObject>
    <description>Stores Data from SSPs to support Reporting and Programmatic Advertising.</description>
    <fields>
        <fullName>ADvendio__AdPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows the relation from Programmatic Data to the AdPrice.</description>
        <inlineHelpText>Shows the relation from Programmatic Data to the AdPrice.</inlineHelpText>
        <label>Ad Price</label>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Programmatic Data</relationshipLabel>
        <relationshipName>ProgrammaticData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerLogin__c</fullName>
        <description>Reference to the SSP&apos;s AdServer Login record. Automatically filled by scheduled import job.</description>
        <inlineHelpText>Reference to the SSP&apos;s AdServer Login record. Automatically filled by scheduled import job.</inlineHelpText>
        <label>AdServer Login</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>Programmatic Data</relationshipLabel>
        <relationshipName>ProgrammaticData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSlotID__c</fullName>
        <description>Ad Slot ID of this transaction. Automatically filled by scheduled import job (if available by SSP).</description>
        <inlineHelpText>Ad Slot ID of this transaction. Automatically filled by scheduled import job (if available by SSP).</inlineHelpText>
        <label>Ad Slot ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdSlot__c</fullName>
        <description>AdSlot used for this Transaction. Automatically filled by scheduled import job.</description>
        <inlineHelpText>AdSlot used for this Transaction. Automatically filled by scheduled import job.</inlineHelpText>
        <label>Ad Slot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdUnitID__c</fullName>
        <description>ID of network part (AdUnit/Site/Page etc.) for this transaction. Automatically filled by scheduled import (job if available by SSP).</description>
        <inlineHelpText>ID of network part (AdUnit/Site/Page etc.) for this transaction. Automatically filled by scheduled import (job if available by SSP).</inlineHelpText>
        <label>Ad Unit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdUnit__c</fullName>
        <description>Name of network part (AdUnit/Site/Page etc.) for this transaction. Automatically filled by scheduled import (job if available by SSP).</description>
        <inlineHelpText>Name of network part (AdUnit/Site/Page etc.) for this transaction. Automatically filled by scheduled import (job if available by SSP).</inlineHelpText>
        <label>Ad Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdvertiserId__c</fullName>
        <description>Advertiser ID for this transaction. Automatically filled by scheduled import (job if available by SSP).</description>
        <inlineHelpText>Advertiser ID for this transaction. Automatically filled by scheduled import (job if available by SSP).</inlineHelpText>
        <label>Advertiser ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Advertiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Advertiser Account for this transaction. Automatically filled by scheduled import job if available by SSP.</description>
        <inlineHelpText>Reference to the Advertiser Account for this transaction. Automatically filled by scheduled import job if available by SSP.</inlineHelpText>
        <label>Advertiser</label>
        <referenceTo>ADvendio__ProgrammaticAccount__c</referenceTo>
        <relationshipLabel>Programmatic Data</relationshipLabel>
        <relationshipName>ProgrammaticDataAdvertiser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AgencyID__c</fullName>
        <description>ID of the Agency / Buyer Account for this transaction. Automatically filled by scheduled import (job if available by SSP).</description>
        <inlineHelpText>ID of the Agency / Buyer Account for this transaction. Automatically filled by scheduled import (job if available by SSP).</inlineHelpText>
        <label>Agency ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Agency / Buyer Account for this transaction. Automatically filled by scheduled import (job if available by SSP).</description>
        <inlineHelpText>Reference to the Agency / Buyer Account for this transaction. Automatically filled by scheduled import (job if available by SSP).</inlineHelpText>
        <label>Agency</label>
        <referenceTo>ADvendio__ProgrammaticAccount__c</referenceTo>
        <relationshipLabel>Programmatic Data (Agency)</relationshipLabel>
        <relationshipName>ProgrammaticDataAgency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ClicksNumber__c</fullName>
        <description>Converts the text field &apos;Clicks__c&apos; to number.</description>
        <formula>VALUE(ADvendio__Clicks__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Converts the text field &apos;Clicks__c&apos; to number.</inlineHelpText>
        <label>Clicks (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Clicks__c</fullName>
        <description>Number of clicks for this transaction. Automatically filled by scheduled import job.</description>
        <inlineHelpText>Number of clicks for this transaction. Automatically filled by scheduled import job.</inlineHelpText>
        <label>Clicks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Country__c</fullName>
        <description>Country or Country Code for this transaction. Automatically filled by scheduled import job (if available by SSP).</description>
        <inlineHelpText>Country or Country Code for this transaction. Automatically filled by scheduled import job (if available by SSP).</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DSPText__c</fullName>
        <description>Demand Side Platform (e.g. BidManager, Live Agent etc.) for this Auction/Deal. Automatically filled by scheduled import job.</description>
        <inlineHelpText>Demand Side Platform (e.g. BidManager, Live Agent etc.) for this Auction/Deal. Automatically filled by scheduled import job.</inlineHelpText>
        <label>DSP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DSP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account relation for Demand Side Platform (e.g. BidManager, Live Agent etc.) for this Auction/Deal. Automatically filled by scheduled import job.</description>
        <inlineHelpText>Account relation for Demand Side Platform (e.g. BidManager, Live Agent etc.) for this Auction/Deal. Automatically filled by scheduled import job.</inlineHelpText>
        <label>DSP</label>
        <referenceTo>ADvendio__ProgrammaticAccount__c</referenceTo>
        <relationshipLabel>Programmatic Data (DSP)</relationshipLabel>
        <relationshipName>ProgrammaticDataDSP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Date__c</fullName>
        <description>Month of the Transaction. Automatically filled by scheduled import job (if available by SSP). ADvendio aggregates data by month to avoid mass data.</description>
        <inlineHelpText>Month of the Transaction. Automatically filled by scheduled import job (if available by SSP). ADvendio aggregates data by month to avoid mass data.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__DealID__c</fullName>
        <description>Deal ID for the transaction. Automatically filled by scheduled import job (if available by SSP).</description>
        <inlineHelpText>Deal ID for the transaction. Automatically filled by scheduled import job (if available by SSP).</inlineHelpText>
        <label>Deal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DealName__c</fullName>
        <description>Deal name for the transaction. Automatically filled by scheduled import job (if available by SSP).</description>
        <inlineHelpText>Deal name for the transaction. Automatically filled by scheduled import job (if available by SSP).</inlineHelpText>
        <label>Deal Name</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__EndDate__c</fullName>
        <description>End Date of Transaction. Automatically filled by scheduled import job (if available).</description>
        <inlineHelpText>End Date of Transaction. Automatically filled by scheduled import job (if available).</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExternalID__c</fullName>
        <description>External ID for this Transaction. Automatically filled by scheduled import job (if available by the specific SSP).</description>
        <inlineHelpText>External ID for this Transaction. Automatically filled by scheduled import job (if available by the specific SSP).</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ImpressionsNumber__c</fullName>
        <description>Converts the text field &apos;Impressions&apos; to number.</description>
        <formula>Value(ADvendio__Impressions__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Converts the text field &apos;Impressions&apos; to number.</inlineHelpText>
        <label>Impressions (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Impressions__c</fullName>
        <description>Number of impressions for this transaction. Automatically filled by scheduled import job.</description>
        <inlineHelpText>Number of impressions for this transaction. Automatically filled by scheduled import job.</inlineHelpText>
        <label>Impressions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox marks the Programmatic Data record after it was used for the creation of Media Campaigns from open auction records.</description>
        <inlineHelpText>This checkbox marks the Programmatic Data record after it was used for the creation of Media Campaigns from open auction records.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ProgrammaticAdPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Adprice for this Transaction. Has to be linked by a user.</description>
        <inlineHelpText>Please select the correct AdPrice for this transaction.</inlineHelpText>
        <label>Programmatic AdPrice</label>
        <referenceTo>ADvendio__ProgrammaticAdPrice__c</referenceTo>
        <relationshipLabel>Programmatic Data</relationshipLabel>
        <relationshipName>ProgrammaticData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ProgrammaticSalesPrice__c</fullName>
        <description>Calculates the Sales Price for this auction, based upon the connected Ad Price. For CPM prices the number of Impressions is used for calculation, for CPC prices the number of clicks is used.</description>
        <formula>IF(
 NOT(
     OR(
      ISPICKVAL(ADvendio__AdPrice__r.ADvendio__Billing_Category__c, &quot;CPM&quot;),ISPICKVAL(ADvendio__AdPrice__r.ADvendio__Billing_Category__c, &quot;CPC&quot;)
     )
  ), 0,
 IF(
 ISPICKVAL(ADvendio__AdPrice__r.ADvendio__Billing_Category__c, &quot;CPM&quot;), ADvendio__RevenueCurrency__c / ADvendio__ImpressionsNumber__c * 1000, 
 ADvendio__RevenueCurrency__c / ADvendio__ClicksNumber__c 
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the Sales Price for this auction, based upon the connected Ad Price. For CPM prices the number of Impressions is used for calculation, for CPC prices the number of clicks is used.</inlineHelpText>
        <label>Programmatic Sales Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__RevenueCurrency__c</fullName>
        <description>Converts the text field &apos;Revenue__c&apos; to currency.</description>
        <formula>Value (ADvendio__Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Converts the text field &apos;Revenue__c&apos; to currency.</inlineHelpText>
        <label>Revenue (Currency)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Revenue__c</fullName>
        <description>Revenue realized with this transaction. Automatically filled by scheduled import job. Some SSPs deliver only the gross revenue.</description>
        <inlineHelpText>Revenue realized with this transaction. Automatically filled by scheduled import job. Some SSPs deliver only the gross revenue.</inlineHelpText>
        <label>Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__StartDate__c</fullName>
        <description>Start Date of Transaction. Automatically filled by scheduled import job (if available).</description>
        <inlineHelpText>Start Date of Transaction. Automatically filled by scheduled import job (if available).</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__TransactionType__c</fullName>
        <description>TransactionType. Automatically filled by scheduled import job (if available by the specific SSP).</description>
        <inlineHelpText>TransactionType. Automatically filled by scheduled import job (if available by the specific SSP).</inlineHelpText>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>A unique identifier generated by the PA web service.</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique identifier generated by the PA web service.</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__eCPC__c</fullName>
        <description>Effective cost per click. Automatically filled by scheduled import job (if available).</description>
        <inlineHelpText>Effective cost per click. Automatically filled by scheduled import job (if available).</inlineHelpText>
        <label>eCPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__eCPM__c</fullName>
        <description>Effective cost per thousand impressions. Automatically filled by scheduled import job (if available).</description>
        <inlineHelpText>Effective cost per thousand impressions. Automatically filled by scheduled import job (if available).</inlineHelpText>
        <label>eCPM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Programmatic Data</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServerLogin__c</columns>
        <columns>ADvendio__ExternalID__c</columns>
        <columns>ADvendio__RevenueCurrency__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PAD-{0000}</displayFormat>
        <label>Programmatic Data-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programmatic Data</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__ADFORM</fullName>
        <active>true</active>
        <description>This record type should be used to store data for SSP Adform.</description>
        <label>Adform</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__ADX</fullName>
        <active>true</active>
        <description>This record type should be used to store data for SSP DoubleClick Ad Exchange.</description>
        <label>ADX</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__APPNEXUS</fullName>
        <active>true</active>
        <description>This record type should be used to store data for SSP AppNexus.</description>
        <label>AppNexus</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__RUBICON</fullName>
        <active>true</active>
        <description>This record type should be used to store data for SSP Rubicon Project.</description>
        <label>Rubicon</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__STICKYADS</fullName>
        <active>true</active>
        <description>This record type should be used to store data for SSP StickyAds.</description>
        <label>StickyAds</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__YIELDLAB</fullName>
        <active>true</active>
        <description>This record type should be used to store data for SSP Yieldlab.</description>
        <label>Yieldlab</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>